--- a/cs2-reservedslots.csproj
+++ b/cs2-reservedslots.csproj
@@ -6,7 +6,7 @@
 		<Platforms>x64</Platforms>
 		<PlatformTarget>x64</PlatformTarget>
 		<TieredCompilation>true</TieredCompilation>
-		<OutputPath>BuildOutput\reservedslots\</OutputPath>
+		<OutputPath>BuildOutput\cs2-reservedslots\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
